test/good/automatic/base/without_input/ret_zero/0033.lat
// official test 11

/* Test pushing -1. */

int main() {
  printInt(-1);
  return 0 ;
}