test/bad/automatic/extension/class/compile_time/0008.lat
class janusz {
  int barbara() {
    return 5;
  }

  int barbara(int x) {
    return x;
  }
}

int main() {
  return 1;
}
